infrastructure/networking/gateway/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-internal
  namespace: gateway
spec:
  # addresses:
  #   - type: IPAddress
  #     value: 172.16.40.50
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.quido.me"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.quido.me"
      tls:
        certificateRefs:
          - name: cert-quidome
            kind: Secret
            group: "" # required
      allowedRoutes:
        namespaces:
          from: All
